// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`cases utilities actionsCell macro renders a formatted cell for a given list of actions 1`] = `
"
    <span class="sas-table__cell-header" aria-hidden="true">Actions</span>

    <ul class="govuk-list">
        <li>Add DTR referral details</li>
        <li>Submit a CRS referral <time datetime="2026-07-23" title="23 July 2026">in 35 days</time></li>
    </ul>
  "
`;

exports[`cases utilities actionsCell macro renders an empty cell when no actions are provided 1`] = `""`;

exports[`cases utilities personCell macro renders a formatted cell for a case with full access 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Name</span>

  <div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2 govuk-!-font-weight-bold">
      <a class="govuk-link" href="/cases/C321654"> Dave Foo </a>
      
    </div>

    
    <dl class="sas-risk-tags govuk-!-margin-0 govuk-!-margin-bottom-1">
      <div class="sas-risk-tag sas-risk-tag--very-high">
    <dt>RoSH</dt>
    <dd>Very high</dd>
  </div>

      <div class="sas-risk-tag sas-risk-tag--tier">
    <dt>Tier</dt>
    <dd>B2</dd>
  </div>
    </dl>
    

    <dl class="sas-person-details govuk-!-margin-0">
      <div>
          <dt>Date of birth</dt>
          <dd>9 October 1980 (45)</dd>
        </div>
      <div>
        <dt>CRN</dt>
        <dd>C321654</dd>
      </div>
      <div>
          <dt>Prison number</dt>
          <dd>A1234BC</dd>
        </div>
      
    </dl>
  </div>"
`;

exports[`cases utilities personCell macro renders a formatted cell for a case with full access with LAO flag 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Name</span>

  <div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2 govuk-!-font-weight-bold">
      <a class="govuk-link" href="/cases/C321654"> Dave Foo </a>
      (LAO)
    </div>

    
    <dl class="sas-risk-tags govuk-!-margin-0 govuk-!-margin-bottom-1">
      <div class="sas-risk-tag sas-risk-tag--very-high">
    <dt>RoSH</dt>
    <dd>Very high</dd>
  </div>

      <div class="sas-risk-tag sas-risk-tag--tier">
    <dt>Tier</dt>
    <dd>B2</dd>
  </div>
    </dl>
    

    <dl class="sas-person-details govuk-!-margin-0">
      <div>
          <dt>Date of birth</dt>
          <dd>9 October 1980 (45)</dd>
        </div>
      <div>
        <dt>CRN</dt>
        <dd>C321654</dd>
      </div>
      <div>
          <dt>Prison number</dt>
          <dd>A1234BC</dd>
        </div>
      
    </dl>
  </div>"
`;

exports[`cases utilities personCell macro renders a formatted cell for a case with limited access 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Name</span>

  <div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2 govuk-!-font-weight-bold">
      <a class="govuk-link" href="/cases/C321666"> Limited access offender </a>
      
    </div>

    

    <dl class="sas-person-details govuk-!-margin-0">
      
      <div>
        <dt>CRN</dt>
        <dd>C321666</dd>
      </div>
      <div>
          <dt>Prison number</dt>
          <dd>Z4567HG</dd>
        </div>
      
    </dl>
  </div>"
`;

exports[`cases utilities personCell macro renders a formatted cell for a case with limited information 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Name</span>

  <div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2 govuk-!-font-weight-bold">
      <a class="govuk-link" href="/cases/D777665"> John Doe </a>
      
    </div>

    
    <dl class="sas-risk-tags govuk-!-margin-0 govuk-!-margin-bottom-1">
      <div class="sas-risk-tag sas-risk-tag--">
    <dt>RoSH</dt>
    <dd>Unknown</dd>
  </div>

      <div class="sas-risk-tag sas-risk-tag--tier">
    <dt>Tier</dt>
    <dd>Unknown</dd>
  </div>
    </dl>
    

    <dl class="sas-person-details govuk-!-margin-0">
      
      <div>
        <dt>CRN</dt>
        <dd>D777665</dd>
      </div>
      
      
    </dl>
  </div>"
`;

exports[`cases utilities personCell macro renders a formatted cell for a case with unknown access 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Name</span>

  <div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2 govuk-!-font-weight-bold">
      <a class="govuk-link" href="/cases/C321669"> Unknown </a>
      
    </div>

    

    <dl class="sas-person-details govuk-!-margin-0">
      
      <div>
        <dt>CRN</dt>
        <dd>C321669</dd>
      </div>
      <div>
          <dt>Prison number</dt>
          <dd>C4567HG</dd>
        </div>
      
    </dl>
  </div>"
`;

exports[`cases utilities personCell macro renders a formatted cell including Assigned to 1`] = `
"<span class="sas-table__cell-header" aria-hidden="true">Name</span>

  <div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2 govuk-!-font-weight-bold">
      <a class="govuk-link" href="/cases/C321654"> Dave Foo </a>
      
    </div>

    
    <dl class="sas-risk-tags govuk-!-margin-0 govuk-!-margin-bottom-1">
      <div class="sas-risk-tag sas-risk-tag--very-high">
    <dt>RoSH</dt>
    <dd>Very high</dd>
  </div>

      <div class="sas-risk-tag sas-risk-tag--tier">
    <dt>Tier</dt>
    <dd>B2</dd>
  </div>
    </dl>
    

    <dl class="sas-person-details govuk-!-margin-0">
      <div>
          <dt>Date of birth</dt>
          <dd>9 October 1980 (45)</dd>
        </div>
      <div>
        <dt>CRN</dt>
        <dd>C321654</dd>
      </div>
      <div>
          <dt>Prison number</dt>
          <dd>A1234BC</dd>
        </div>
      <div>
          <dt>Assigned to</dt>
          <dd>You (John Doe)</dd>
        </div>
    </dl>
  </div>"
`;
